# Ankka

./: .gitignore  CMakeLists.txt  README.md
Ankka/: Ankka.cpp  CMakeLists.txt  GltfModel.cpp  GltfNode.cpp  Logger.cpp  Model.cpp  UserInterface.cpp  Window.cpp
Ankka/model/: GltfAnimationChannel.cpp  GltfAnimationClip.cpp  GltfModel.cpp  GltfNode.cpp  IKSolver.cpp  ModelLoader.cpp
Ankka/opengl/: CoorArrowsModel.cpp  Framebuffer.cpp  OGLRenderer.cpp  OGLRenderer.h  Shader.cpp  ShaderStorageBuffer.cpp  Texture.cpp  Texture.h  UniformBuffer.cpp  VertexBuffer.cpp
Ankka/shaders/: basic.frag  basic.vert  changed.vert  fox.vert  gltf.vert  gltf_gpu.frag  gltf_gpu.vert  gltf_gpu_dquat.vert  line.frag  line.vert
Ankka/tools/: Camera.cpp  Raycaster.cpp  Timer.cpp
Ankka/vulkan/: VkRenderer.cpp
includes/Ankka/: Ankka.h  GltfModel.h  GltfNode.h  Model.h  UserInterface.h  Window.h
includes/Ankka/tools/: Camera.h  Raycaster.h
includes/model/: GltfAnimationChannel.h  GltfAnimationClip.h  GltfModel.h  GltfNode.h  IKSolver.h  MeshPrimitive.h
includes/opengl/: OGLRenderData.h  OGLRenderer.h  Shader.h  ShaderStorageBuffer.h  Texture.h  UniformBuffer.h  VertexBuffer.h
includes/vulkan/: VkRenderData.h  VkRenderer.h
